9. Генерирование колоды карт. FlatMap